@@ -186,9 +186,10 @@ then
        CLASSPATH=${CLASSPATH}:$f;
     done
 
-    for f in $MAHOUT_HOME/h2o/target/mahout-h2o-*.jar; do
+    for f in $MAHOUT_HOME/h2o/target/mahout-h2o*.jar; do
        CLASSPATH=${CLASSPATH}:$f;
     done
+
   fi
 
   # add jars for running from the command line if we requested shell or spark CLI driver
