@@ -29,7 +29,6 @@ trait DistributedH2OSuite extends DistributedMahoutSuite with LoggerConfiguratio
 
   override protected def beforeEach() {
     super.beforeEach()
-
     mahoutCtx = mahoutH2OContext("mah2out" + System.currentTimeMillis())
   }
 
